--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
             <h2>Hadith des Tages</h2>
             <p id="hadith-arabisch">Lädt...</p>
             <p id="hadith-deutsch">Lädt...</p>
-            <p><strong>Quelle:</strong> <span id="hadith-quelle">Lädt...</span></p>
-            <p><strong>Authentizität:</strong> <span id="hadith-auth">Lädt...</span></p>
+            <p><strong>Quelle und Authentizität:</strong> <span id="hadith-auth">Lädt...</span></p>
         </section>
 
         <section id="dua-des-tages">
@@ -61,7 +60,7 @@
             <p id="dua-arabisch">Lädt...</p>
             <p id="dua-deutsch">Lädt...</p>
             <p><strong>Transliteration:</strong> <span id="dua-trans">Lädt...</span></p>
-            <p><strong>Quelle:</strong> <span id="dua-quelle">Lädt...</span></p>
+            <p><strong>Quelle und Authentizität:</strong> <span id="dua-quelle">Lädt...</span></p>
         </section>
     </main>
 
