--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <main>
         <section id="zeit-section">
             <h2>Aktuelle Uhrzeit</h2>
-            <p id="uhrzeit">00:00:00</p>
+            <p id="uhrzeit">Berlin: 00:00:00</p>
             <p id="datum">Lädt...</p>
             <p id="islamisches-datum">Lädt...</p>
-            <p id="mekka-uhrzeit">Mekka: 00:00</p>
+            <p id="mekka-uhrzeit">Mekka: 00:00:00</p>
         </section>
 
         <section id="gebetszeiten">
@@ -38,7 +38,7 @@
             <select id="stadt-auswahl"></select>
             <ul>
                 <li><strong>Fajr:</strong> <span id="fajr">00:00</span></li>
-                <li><strong>Shuruk:</strong> <span id="shuruk">00:00</span></li>
+                <li>Shuruk (Sonnenaufgang): <span id="shuruk">00:00</span></li>
                 <li><strong>Dhuhr:</strong> <span id="dhuhr">00:00</span></li>
                 <li><strong>Asr:</strong> <span id="asr">00:00</span></li>
                 <li><strong>Maghrib:</strong> <span id="maghrib">00:00</span></li>
