--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <main>
         <section id="zeit-section">
             <h2>Aktuelle Uhrzeit</h2>
-            <p id="uhrzeit-berlin">00:00:00</p>
-            <p id="gregorianisches-datum">Lädt...</p>
+            <p id="uhrzeit">00:00:00</p>
+            <p id="datum">Lädt...</p>
             <p id="islamisches-datum">Lädt...</p>
-            <p id="uhrzeit-mekka">Mekka: 00:00:00</p>
+            <p id="mekka-uhrzeit">Mekka: 00:00</p>
         </section>
 
         <section id="gebetszeiten">
@@ -38,7 +38,7 @@
             <select id="stadt-auswahl"></select>
             <ul>
                 <li><strong>Fajr:</strong> <span id="fajr">00:00</span></li>
-                <li>Shuruk (Sonnenaufgang): <span id="shuruk">00:00</span></li>
+                <li><strong>Shuruk:</strong> <span id="shuruk">00:00</span></li>
                 <li><strong>Dhuhr:</strong> <span id="dhuhr">00:00</span></li>
                 <li><strong>Asr:</strong> <span id="asr">00:00</span></li>
                 <li><strong>Maghrib:</strong> <span id="maghrib">00:00</span></li>
@@ -46,21 +46,6 @@
                 <li>Islamische Mitternacht: <span id="mitternacht">00:00</span></li>
                 <li>Letztes Drittel der Nacht: <span id="letztes-drittel">00:00</span></li>
             </ul>
-        </section>
-
-        <section id="hadith-des-tages">
-            <h2>Hadith des Tages</h2>
-            <p id="hadith-arabisch">Lädt...</p>
-            <p id="hadith-deutsch">Lädt...</p>
-            <p><strong>Quelle und Authentizität:</strong> <span id="hadith-auth">Lädt...</span></p>
-        </section>
-
-        <section id="dua-des-tages">
-            <h2>Bittgebet des Tages</h2>
-            <p id="dua-arabisch">Lädt...</p>
-            <p id="dua-deutsch">Lädt...</p>
-            <p><strong>Transliteration:</strong> <span id="dua-trans">Lädt...</span></p>
-            <p><strong>Quelle und Authentizität:</strong> <span id="dua-quelle">Lädt...</span></p>
         </section>
     </main>
 
