--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
     <main>
         <section id="zeit-section">
-            <h2>Aktuelle Uhrzeit</h2>
-            <p id="uhrzeit">00:00:00</p>
-            <p id="datum">Lädt...</p>
-            <p id="islamisches-datum">Lädt...</p>
-            <p id="mecce-time">Mekka: 00:00</p>
+            <p id="stadt-anzeige">Ihr Standort: <span id="stadtname">Wird ermittelt...</span></p>
+        <p>Islamisches Datum: <span id="islamisches-datum">Lädt...</span></p>
+        <p>Gregorianisches Datum: <span id="gregorianisches-datum">Lädt...</span></p>
+        <p>Uhrzeit Mekka: <span id="uhrzeit-mekka">00:00</span></p>
+        <p>Uhrzeit Berlin: <span id="uhrzeit-berlin">00:00</span></p>
         </section>
 
         <section id="gebetszeiten">
