--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
     </header>
 
     <main>
-        <section id="zeit-section">
-            <p id="stadt-anzeige">Ihr Standort: <span id="stadtname">Wird ermittelt...</span></p>
+        <section id=„updateUhrzeit>
+            <p id="stadtname“>Ihr Standort: <span id="stadtname">Wird ermittelt...</span></p>
         <p>Islamisches Datum: <span id="islamisches-datum">Lädt...</span></p>
-        <p>Gregorianisches Datum: <span id="gregorianisches-datum">Lädt...</span></p>
-        <p>Uhrzeit Mekka: <span id="uhrzeit-mekka">00:00</span></p>
-        <p>Uhrzeit Berlin: <span id="uhrzeit-berlin">00:00</span></p>
+        <p>Gregorianisches Datum: <span id="datum">Lädt...</span></p>
+        <p>Uhrzeit Mekka: <span id=„mecca-time>00:00:00</span></p>
+        <p>Uhrzeit Berlin: <span id="uhrzeit">00:00:00</span></p>
         </section>
 
         <section id="gebetszeiten">
             <h2>Gebetszeiten</h2>
-            <p>Ihr Standort: <span id="stadt-name">" "</span></p>
-            <select id="stadt-auswahl"></select>
+            <p>Ihr Standort: <span id="stadt-name“>“ "</span></p>
+            <select id=„stadt-auswahl"></select>
             <ul>
                 <li><strong>Fajr:</strong> <span id="fajr">00:00</span></li>
                 <li>Shuruk (Sonnenaufgang): <span id="shuruk">00:00</span></li>
@@ -63,66 +63,6 @@
             <p id="dua-authentizität"></p>
         </section>
   
-    </main>
-
-    <footer>
-        <p>&copy; 2025 Usul ad-Deen</p>
-    </footer>
-</body>
-</html>
-
-
-
-<!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usul ad-Deen</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
-</head>
-<body>
-    <header>
-        <h1>Usul ad-Deen</h1>
-        <p id="stadt-anzeige">Ihr Standort: <span id="stadtname">Wird ermittelt...</span></p>
-        <p>Islamisches Datum: <span id="islamisches-datum">Lädt...</span></p>
-        <p>Gregorianisches Datum: <span id="gregorianisches-datum">Lädt...</span></p>
-        <p>Uhrzeit Mekka: <span id="uhrzeit-mekka">00:00</span></p>
-        <p>Uhrzeit Berlin: <span id="uhrzeit-berlin">00:00</span></p>
-    </header>
-
-    <main>
-        <section id="gebetszeiten">
-            <h2>Gebetszeiten</h2>
-            <table class="gebetszeiten-table">
-                <tr><th>Gebet</th><th>Zeit</th></tr>
-                <tr><td class="bold">Fajr</td><td id="fajr">00:00</td></tr>
-                <tr><td>Shuruk</td><td id="shuruk">00:00</td></tr>
-                <tr><td class="bold">Dhuhr</td><td id="dhuhr">00:00</td></tr>
-                <tr><td class="bold">Asr</td><td id="asr">00:00</td></tr>
-                <tr><td class="bold">Maghrib</td><td id="maghrib">00:00</td></tr>
-                <tr><td class="bold">Isha</td><td id="isha">00:00</td></tr>
-                <tr><td>Islamische Mitternacht</td><td id="islamische-mitternacht">00:00</td></tr>
-                <tr><td>Letztes Drittel der Nacht</td><td id="letztes-drittel">00:00</td></tr>
-            </table>
-        </section>
-
-        <section id="hadith">
-            <h2>Hadith des Tages</h2>
-            <p id="hadith-arabisch"></p>
-            <p id="hadith-deutsch"></p>
-            <p id="hadith-authentizität"></p>
-        </section>
-
-        <section id="dua">
-            <h2>Bittgebet des Tages</h2>
-            <p id="dua-arabisch"></p>
-            <p id="dua-deutsch"></p>
-            <p id="dua-transliteration"></p>
-            <p id="dua-quellenangabe"></p>
-            <p id="dua-authentizität"></p>
-        </section>
     </main>
 
     <footer>
