--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
     </header>
 
     <main>
-        <section id=„updateUhrzeit>
-            <p id="stadtname“>Ihr Standort: <span id="stadtname">Wird ermittelt...</span></p>
-        <p>Islamisches Datum: <span id="islamisches-datum">Lädt...</span></p>
-        <p>Gregorianisches Datum: <span id="datum">Lädt...</span></p>
-        <p>Uhrzeit Mekka: <span id=„mecca-time>00:00:00</span></p>
-        <p>Uhrzeit Berlin: <span id="uhrzeit">00:00:00</span></p>
+        <section id="zeit-section">
+            <h2>Aktuelle Uhrzeit</h2>
+            <p id="uhrzeit">00:00:00</p>
+            <p id="datum">Lädt...</p>
+            <p id="islamisches-datum">Lädt...</p>
+            <p id="mekka-uhrzeit">Mekka: 00:00:00</p>
         </section>
 
         <section id="gebetszeiten">
             <h2>Gebetszeiten</h2>
-            <p>Ihr Standort: <span id="stadt-name“>“ "</span></p>
-            <select id=„stadt-auswahl"></select>
+            <p>Ihr Standort: <span id="stadt-name">Unbekannt</span></p>
+            <select id="stadt-auswahl"></select>
             <ul>
                 <li><strong>Fajr:</strong> <span id="fajr">00:00</span></li>
                 <li>Shuruk (Sonnenaufgang): <span id="shuruk">00:00</span></li>
@@ -47,22 +47,22 @@
                 <li>Letztes Drittel der Nacht: <span id="letztes-drittel">00:00</span></li>
             </ul>
         </section>
-        
-        <section id="hadith">
+
+        <section id="hadith-des-tages">
             <h2>Hadith des Tages</h2>
-            <p id="hadith-arabisch"></p>
-            <p id="hadith-deutsch"></p>
-            <p id="hadith-authentizität"></p>
+            <p id="hadith-arabisch">Lädt...</p>
+            <p id="hadith-deutsch">Lädt...</p>
+            <p><strong>Quelle:</strong> <span id="hadith-quelle">Lädt...</span></p>
+            <p><strong>Authentizität:</strong> <span id="hadith-auth">Lädt...</span></p>
         </section>
 
-        <section id="dua">
+        <section id="dua-des-tages">
             <h2>Bittgebet des Tages</h2>
-            <p id="dua-arabisch"></p>
-            <p id="dua-deutsch"></p>
-            <p id="dua-transliteration"></p>
-            <p id="dua-authentizität"></p>
+            <p id="dua-arabisch">Lädt...</p>
+            <p id="dua-deutsch">Lädt...</p>
+            <p><strong>Transliteration:</strong> <span id="dua-trans">Lädt...</span></p>
+            <p><strong>Quelle:</strong> <span id="dua-quelle">Lädt...</span></p>
         </section>
-  
     </main>
 
     <footer>
