--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p id="uhrzeit">00:00:00</p>
             <p id="datum">Lädt...</p>
             <p id="islamisches-datum">Lädt...</p>
-            <p id="mekka-uhrzeit">Mekka: 00:00:00</p>
+            <p id="mekka-uhrzeit">Mekka: 00:00</p>
         </section>
 
         <section id="gebetszeiten">
@@ -50,9 +50,9 @@
 
         <section id="hadith-des-tages">
             <h2>Hadith des Tages</h2>
-            <p id="hadith-arabisch">Lädt...</p>
-            <p id="hadith-deutsch">Lädt...</p>
-            <p><strong>Quelle und Authentizität:</strong> <span id="hadith-Authentizität">Lädt...</span></p>
+            <p id="hadith-arabisch"></p>
+            <p id="hadith-deutsch"></p>
+            <p><strong>Quelle und Authentizität:</strong> <span id="hadith-Authentizität"></span></p>
         </section>
 
         <section id="dua-des-tages">
