--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section id="zeit-section">
             <h2>Aktuelle Uhrzeit</h2>
-            <div style="text-align:left;padding:1em 0;"> <h4><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/de/city/2950159"><span style="color:gray;">Aktuelle Uhrzeit / Ortszeit</span><br />Berlin, Deutschland</a></h4> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=de&size=small&timezone=Europe%2FBerlin" width="50%" height="30" frameborder="0" seamless></iframe> <small style="color:gray;">&copy; <a href="https://www.zeitzonenrechner.net/" style="color: gray;">Zeitzonenrechner</a></small> </div>
+            <div style="text-align:left;padding:1em 0;"> <span style="color:gray;">Aktuelle Uhrzeit / Ortszeit</span><br />Berlin, Deutschland</a></h4> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=de&size=small&timezone=Europe%2FBerlin" width="50%" height="30" frameborder="0" seamless></iframe> <small style="color:gray;">&copy; <a href="https://www.zeitzonenrechner.net/" style="color: gray;">Zeitzonenrechner</a></small> </div>
             <p id="datum">Lädt...</p>
             <p id="islamisches-datum">Lädt...</p>
           <div style="text-align:right;padding:1em 0;"> <h4><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/de/city/104515"><span style="color:gray;">Aktuelle Uhrzeit / Ortszeit</span><br />Mecca, Saudi-Arabien</a></h4> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=de&size=small&timezone=Asia%2FRiyadh" width="50%" height="30" frameborder="0" seamless></iframe> <small style="color:gray;">&copy; <a href="https://www.zeitzonenrechner.net/" style="color: gray;">Zeitzonenrechner</a></small> </div>
