--- a/index.html
+++ b/index.html
@@ -63,6 +63,55 @@
             <p><strong>Transliteration:</strong> <span id="dua-trans">Lädt...</span></p>
             <p><strong>Quelle:</strong> <span id="dua-quelle">Lädt...</span></p>
         </section>
+
+        <div style="margin:auto; border:1px solid #c0c0c0" id="prayer-container">
+    <div class="prayer_time">Gebetszeiten</div>
+    <div id="prayer_city"></div>
+    <div id="prayer_date"></div>
+    <div id="prayer_clock"></div>
+    <table>
+        <tbody>
+            <tr>
+                <td>Imsak</td>
+                <td id="Imsak"></td>
+            </tr>
+            <tr>
+                <td>Fajr</td>
+                <td id="Fajr"></td>
+            </tr>
+            <tr>
+                <td>Dhuhr</td>
+                <td id="Dhuhr"></td>
+            </tr>
+            <tr>
+                <td>Asr</td>
+                <td id="Asr"></td>
+            </tr>
+            <tr>
+                <td>Maghrib</td>
+                <td id="Maghrib"></td>
+            </tr>
+            <tr>
+                <td>Isha</td>
+                <td id="Isha"></td>
+            </tr> 
+            <tr>
+                <td>Mitternacht</td>
+                <span id="mitternacht"></span></td>
+            </tr> 
+        <tr>
+                <td>letztes Drittel der Nacht</td>
+                <span id="letztes-Drittel"></span></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<script>
+    var api_url = 'https://api.pray.zone/v2/times/today.json?ip=auto';
+    document.addEventListener("DOMContentLoaded", function () {
+        PrayerTimesApi();
+    });
+</script>
     </main>
 
     <footer>
