--- a/index.html
+++ b/index.html
@@ -36,16 +36,21 @@
             <h2>Gebetszeiten</h2>
             <p>Ihr Standort: <span id="stadt-name">Unbekannt. Bitte manuell wählen.</span></p>
             <select id="stadt-auswahl"></select>
-            <ul>
-                <li><strong>Fajr:</strong> <span id="fajr">00:00</span></li>
-                <li><strong>Shuruk:</strong> <span id="shuruk">00:00</span></li>
-                <li><strong>Dhuhr:</strong> <span id="dhuhr">00:00</span></li>
-                <li><strong>Asr:</strong> <span id="asr">00:00</span></li>
-                <li><strong>Maghrib:</strong> <span id="maghrib">00:00</span></li>
-                <li><strong>Isha:</strong> <span id="isha">00:00</span></li>
-                <li>Islamische Mitternacht: <span id="mitternacht">00:00</span></li>
-                <li>Letztes Drittel der Nacht: <span id="letztes-drittel">00:00</span></li>
-            </ul>
+            <ul><div style="margin:auto; border:1px solid #c0c0c0" id="prayer-container">
+                <table>
+        <tbody>
+               <td><tr><strong>Fajr:</strong> <span id="fajr">00:00</span></tr></td>
+               <td><tr><strong>Shuruk:</strong> <span id="shuruk">00:00</span></tr></td>
+               <td><tr><strong>Dhuhr:</strong> <span id="dhuhr">00:00</span></tr></td>
+             <td><tr><strong>Asr:</strong> <span id="asr">00:00</span></tr></td>
+               <td><tr><strong>Maghrib:</strong> <span id="maghrib">00:00</span></tr></td>
+                <td><tr><strong>Isha:</strong> <span id="isha">00:00</span></tr></td>
+               <td><tr>Islamische Mitternacht: <span id="mitternacht">00:00</span></tr></td>
+               <td><tr>Letztes Drittel der Nacht: <span id="letztes-drittel">00:00</span></tr></td>
+        </tbody>
+               </table>
+</div></ul>
+        
         </section>
 
         <section id="hadith-des-tages">
