--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </tr>
                   
             <tr>
-                       <td><strong>Shuruk:</strong> </td>
+                       <td>Shuruk (Sonnenaufgang): </td>
                              <td><span id="shuruk">00:00</span></td>
               
                    <tr>
