--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <p id="datum">Lädt...</p>
             <p id="islamisches-datum">Lädt...</p>
             <p id="mekka-uhrzeit">Mekka: 00:00</p>
+            <p id="uhrzeitMekka">Mekka: 00:00</p>
         </section>
 
         <section id="gebetszeiten">
