--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                     <th>Gebet</th>
                     <th>Uhrzeit</th>
                 </tr>
-                <tr><td>Fajr</td><td id="fajr">00:00</td></tr>
-                <tr><td>Shuruk</td><td id="shuruk">00:00</td></tr>
-                <tr><td>Dhuhr</td><td id="dhuhr">00:00</td></tr>
-                <tr><td>Asr</td><td id="asr">00:00</td></tr>
-                <tr><td>Maghrib</td><td id="maghrib">00:00</td></tr>
-                <tr><td>Isha</td><td id="isha">00:00</td></tr>
-                <tr><td>Islamische Mitternacht</td><td id="mitternacht">00:00</td></tr>
+                <tr><td><strong></strong>Fajr</strong></td><td id="fajr">00:00</td></tr>
+                <tr><td>Shuruk (Sonnenaufgang)</td><td id="shuruk">00:00</td></tr>
+                <tr><td><strong>Dhuhr</strong></td><td id="dhuhr">00:00</td></tr>
+                <tr><td><strong>Asr</strong></td><td id="asr">00:00</td></tr>
+                <tr><td><strong>Maghrib</strong></td><td id="maghrib">00:00</td></tr>
+                <tr><td><strong>Isha</strong></td><td id="isha">00:00</td></tr>
+                <tr><td>Islamische Mitternacht (Ende Isha)</td><td id="mitternacht">00:00</td></tr>
                 <tr><td>Letztes Drittel</td><td id="letztes-drittel">00:00</td></tr>
             </table>
         </section>
@@ -66,6 +66,7 @@
             <p id="dua-deutsch">Lädt...</p>
             <p><strong>Transliteration:</strong> <span id="dua-trans">Lädt...</span></p>
             <p><strong>Quelle:</strong> <span id="dua-quelle">Lädt...</span></p>
+             <p><strong>Authentizität:</strong> <span id="dua-auth">Lädt...</span></p>
         </section>
     </main>
 
