--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         </section>
 
         <section id="dua-des-tages">
-            <h2>Bittgebet des Tages</h2>
-            <p id="dua-arabisch">Lädt...</p>
-            <p id="dua-deutsch">Lädt...</p>
-            <p><strong>Transliteration:</strong> <span id="dua-trans">Lädt...</span></p>
-            <p><strong>Quelle:</strong> <span id="dua-quelle">Lädt...</span></p>
-             <p><strong>Authentizität:</strong> <span id="dua-auth">Lädt...</span></p>
-        </section>
+    <h2>Bittgebet des Tages</h2>
+    <p id="dua-arabisch">Lädt...</p>
+    <p id="dua-deutsch">Lädt...</p>
+    <p><strong>Transliteration:</strong> <span id="dua-trans">Lädt...</span></p>
+    <p><strong>Quelle und Authentizität:</strong> <span id="dua-quelle">Lädt...</span></p>
+</section>
+
     </main>
 
     <footer>
