--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <main>
         <section id="zeit-section">
             <h2>Aktuelle Uhrzeit</h2>
-            <p id="uhrzeit">00:00:00</p>
+            <p id="uhrzeit">Berlin: 00:00:00</p>
             <p id="datum">Lädt...</p>
             <p id="islamisches-datum">Lädt...</p>
-            <p id="mekka-uhrzeit">Mekka: 00:00</p>
+            <p id="mekka-uhrzeit">Mekka: 00:00:00</p>
         </section>
 
         <section id="gebetszeiten">
@@ -41,8 +41,8 @@
                     <th>Gebet</th>
                     <th>Uhrzeit</th>
                 </tr>
-                <tr><td><strong></strong>Fajr</strong></td><td id="fajr">00:00</td></tr>
-                <tr><td>Shuruk (Sonnenaufgang)</td><td id="shuruk">00:00</td></tr>
+                <tr><td><strong></strong>Fajr</strong></td><td id="fajr"><strong>00:00</strong></td></tr>
+                <tr><td>Shuruk (Sonnenaufgang)</td><strong><td id="shuruk">00:00</td></strong></tr>
                 <tr><td><strong>Dhuhr</strong></td><td id="dhuhr">00:00</td></tr>
                 <tr><td><strong>Asr</strong></td><td id="asr">00:00</td></tr>
                 <tr><td><strong>Maghrib</strong></td><td id="maghrib">00:00</td></tr>
