--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
     <main>
         <section id="zeit-section">
             <h2>Aktuelle Uhrzeit</h2>
-            <p id="uhrzeit">Berlin: 00:00:00</p>
-            <p id="datum">Lädt...</p>
-            <p id="islamisches-datum">Lädt...</p>
-            <p id="mekka-uhrzeit">Mekka: 00:00:00</p>
+            <p id="datum"><strong>Lädt...</strong></p><strong><p id="uhrzeit">Berlin: 00:00:00</p></strong>
+            <p id="islamisches-datum">Lädt...</p><p id="mekka-uhrzeit">Mekka: 00:00:00</p>
         </section>
 
         <section id="gebetszeiten">
