--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <main>
         <section id="zeit-section">
             <h2>Aktuelle Uhrzeit</h2>
-            <p id="datum"><strong>Lädt...</strong></p><strong><p id="uhrzeit">Berlin: 00:00:00</p></strong>
-            <p id="islamisches-datum">Lädt...</p><p id="mekka-uhrzeit">Mekka: 00:00:00</p>
+            <strong><p id="datum">Lädt...</p></strong><strong><p id="uhrzeit">Berlin: 00:00:00</p></strong>
+            <strong><p id="islamisches-datum">Lädt...</p></strong><strong><p id="mekka-uhrzeit">Mekka: 00:00:00</p></strong>
+          
         </section>
 
         <section id="gebetszeiten">
@@ -39,9 +40,9 @@
                     <th>Gebet</th>
                     <th>Uhrzeit</th>
                 </tr>
-                <tr><td><strong></strong>Fajr</strong></td><td id="fajr"><strong>00:00</strong></td></tr>
-                <tr><td>Shuruk (Sonnenaufgang)</td><strong><td id="shuruk">00:00</td></strong></tr>
-                <tr><td><strong>Dhuhr</strong></td><td id="dhuhr">00:00</td></tr>
+                <tr><td><strong></strong>Fajr</strong></td><td strong id="fajr"><strong>00:00</strong></td></tr>
+                <tr><td>Shuruk (Sonnenaufgang)</td><strong><td id= "shuruk">00:00</td></strong></tr>
+                <tr><td><strong>Dhuhr</strong></td><td strong id="dhuhr">00:00</td></tr>
                 <tr><td><strong>Asr</strong></td><td id="asr">00:00</td></tr>
                 <tr><td><strong>Maghrib</strong></td><td id="maghrib">00:00</td></tr>
                 <tr><td><strong>Isha</strong></td><td id="isha">00:00</td></tr>
