--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
 
     <main>
         <section id="zeit-section">
-            <h2>Aktuelle Uhrzeit</h2>
-            <strong><p id="datum">Lädt...</p></strong><strong><p id="uhrzeit">Berlin: 00:00:00</p></strong>
-            <strong><p id="islamisches-datum">Lädt...</p></strong><strong><p id="mekka-uhrzeit">Mekka: 00:00:00</p></strong>
-          
-        </section>
+    <h2>Aktuelle Zeit & Datum</h2>
+    <p><span id="datum">Lädt...</span> | <span id="uhrzeit">00:00:00</span></p>
+    <p><span id="islamisches-datum">Lädt...</span> | <span id="mekka-uhrzeit">Mekka: 00:00</span></p>
+</section>
 
         <section id="gebetszeiten">
             <h2>Gebetszeiten</h2>
@@ -40,8 +39,8 @@
                     <th>Gebet</th>
                     <th>Uhrzeit</th>
                 </tr>
-                <tr><td><strong></strong>Fajr</strong></td><td strong id="fajr"><strong>00:00</strong></td></tr>
-                <tr><td>Shuruk (Sonnenaufgang)</td><strong><td id= "shuruk">00:00</td></strong></tr>
+                <tr><td><strong>Fajr</strong></td><td id="fajr"><strong>00:00</strong></td></tr>
+                <tr><td>Shuruk (Sonnenaufgang)</td><td id= "shuruk">00:00</td></tr>
                 <tr><td><strong>Dhuhr</strong></td><td strong id="dhuhr">00:00</td></tr>
                 <tr><td><strong>Asr</strong></td><td id="asr">00:00</td></tr>
                 <tr><td><strong>Maghrib</strong></td><td id="maghrib">00:00</td></tr>
