--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section id="zeit-section">
     <h2>Aktuelle Zeit & Datum</h2>
-    <p><span id="datum">Lädt...</span> | <span id="uhrzeit">00:00:00</span></p>
+    <p><span id="datum">Lädt...</span>        <span id="uhrzeit">Berlin: 00:00:00</span></p>
     <p><span id="islamisches-datum">Lädt...</span> | <span id="mekka-uhrzeit">Mekka: 00:00</span></p>
 </section>
 
