--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </header>
 
     <main>
+      
         <section id="zeit-section">
     <h2>Aktuelle Zeit & Datum</h2>
     <p><span id="datum">Lädt...</span>   |  <span id="uhrzeit">Berlin: 00:00:00</span></p>
@@ -39,12 +40,12 @@
                     <th>Gebet</th>
                     <th>Uhrzeit</th>
                 </tr>
-                <tr><td><strong>Fajr</strong></td><td id="fajr"><strong>00:00</strong></td></tr>
+                <tr><td><strong>Fajr</strong></td><td id="fajr" class="fajr-bold"><strong>00:00</strong></td></tr>
                 <tr><td>Shuruk (Sonnenaufgang)</td><td id= "shuruk">00:00</td></tr>
-                <tr><td><strong>Dhuhr</strong></td><td strong id="dhuhr">00:00</td></tr>
-                <tr><td><strong>Asr</strong></td><td id="asr">00:00</td></tr>
-                <tr><td><strong>Maghrib</strong></td><td id="maghrib">00:00</td></tr>
-                <tr><td><strong>Isha</strong></td><td id="isha">00:00</td></tr>
+                <tr><td><strong>Dhuhr</strong></td><td id="dhuhr" class="duhr-bold">00:00</td></tr>
+                <tr><td><strong>Asr</strong></td><td id="asr" class="asr-bold">00:00</td></tr>
+                <tr><td><strong>Maghrib</strong></td><td id="maghrib" class="maghrib-bold">00:00</td></tr>
+                <tr><td><strong>Isha</strong></td><td id="isha" class="isha-bold">00:00</td></tr>
                 <tr><td>Islamische Mitternacht (Ende Isha)</td><td id="mitternacht">00:00</td></tr>
                 <tr><td>Letztes Drittel</td><td id="letztes-drittel">00:00</td></tr>
             </table>
