--- a/bücher.html
+++ b/bücher.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bücher | Usul ad-Deen</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="bücher.js"></script>
+    <script defer src="buecher/bücher.js"></script>
 </head>
 <body>
     <header>
