--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>Usul ad-Deen</h1>
+        <h2>Startseite</h2>
         <img src="icons/icon-192x192.png" alt="Logo" class="logo">
         <nav>
             <ul>
