--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usul ad-Deen</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesindex.css">
     <script defer src="script.js"></script>
 </head>
 <body>
