--- a/bücher.html
+++ b/bücher.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bücher | Usul ad-Deen</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="buecher/bücher.js"></script>
+    <link rel="stylesheet" href="stylesbuecher.css">
+    <script defer src="bücher.js"></script>
 </head>
 <body>
     <header>
