--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <p><span id="islamisches-datum">Lädt...</span> | <span id="mekka-uhrzeit">Mekka: 00:00</span></p>
 </section>
 
-        <section id="gebetszeiten">
+        <section id="gebetszeiten- und Feiertage">
+               <div id="gebetszeiten">
             <h2>Gebetszeiten</h2>
             <p>Ihr Standort: <span id="stadt-name">Unbekannt. Bitte manuell wählen.</span></p>
             <select id="stadt-auswahl"></select>
@@ -51,6 +52,13 @@
                 <tr><td>Islamische Mitternacht (Ende Isha)</td><td id="mitternacht">00:00</td></tr>
                 <tr><td>Letztes Drittel</td><td id="letztes-drittel">00:00</td></tr>
             </table>
+                     </div>
+            <div id="feiertage">
+        <h2>Islamische Feiertage</h2>
+        <table id="feiertage-tabelle">
+            <tr><th>Feiertag</th><th>Datum</th><th>Countdown</th></tr>
+        </table>
+    </div>
         </section>
 
         <section id="hadith-des-tages">
