--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
                      </div>
             <div id="feiertage">
         <h2>Islamische Feiertage</h2>
+                <p> Bitte beachtet, dass die islamischen Feiertage mit dem Vorabend beginnen und sich aufgrund der Mondsichtungen ändern können. </p>
         <table id="feiertage-tabelle">
-            <tr><th>Feiertag</th><th>Datum</th><th>Countdown</th></tr>
+            <tr><th>Feiertag</th><th>Datum</th><th>Noch (Tage)</th></tr>
         </table>
     </div>
         </section>
