--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
                 <p> Bitte beachtet, dass die islamischen Feiertage mit dem Vorabend beginnen und sich aufgrund der Mondsichtungen ändern können. </p>
         <table id="feiertage-tabelle">
             <tr><th>Feiertag</th><th>Datum</th><th>Noch (Tage)</th></tr>
+            </tr>
+                <tr><td><strong>Ramadan</strong></td><tr><td id= "Ramadan.datum"</strong></td><td id="ramadan.countdown" class="countdown-bold"><strong>00:00</strong></td></tr>
+                <tr><td>Shuruk (Sonnenaufgang)</td><td id= "shuruk">00:00</td></tr>
+                <tr><td><strong>Dhuhr</strong></td><td id="dhuhr" class="duhr-bold">00:00</td></tr>
+                <tr><td><strong>Asr</strong></td><td id="asr" class="asr-bold">00:00</td></tr>
+                <tr><td><strong>Maghrib</strong></td><td id="maghrib" class="maghrib-bold">00:00</td></tr>
+                <tr><td><strong>Isha</strong></td><td id="isha" class="isha-bold">00:00</td></tr>
+                <tr><td>Islamische Mitternacht (Ende Isha)</td><td id="mitternacht">00:00</td></tr>
+                <tr><td>Letztes Drittel</td><td id="letztes-drittel">00:00</td></tr>
         </table>
     </div>
         </section>
