--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <table id="feiertage-tabelle">
             <tr><th>Feiertag</th><th>Datum</th><th>Noch (Tage)</th></tr>
             </tr>
-                <tr><td><strong>Ramadan</strong></td><tr><td id= "Ramadan.datum"</strong></td><td id="ramadan.countdown" class="countdown-bold"><strong>00:00</strong></td></tr>
+                <tr><td><strong>Ramadan</strong></td><tr><td id= "Ramadan-datum"</strong></td><td id="ramadan-countdown" class="countdown-bold"><strong>00:00</strong></td></tr>
                 <tr><td>Shuruk (Sonnenaufgang)</td><td id= "shuruk">00:00</td></tr>
                 <tr><td><strong>Dhuhr</strong></td><td id="dhuhr" class="duhr-bold">00:00</td></tr>
                 <tr><td><strong>Asr</strong></td><td id="asr" class="asr-bold">00:00</td></tr>
