--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <p><span id="islamisches-datum">Lädt...</span> | <span id="mekka-uhrzeit">Mekka: 00:00</span></p>
 </section>
 
-        <section id="gebetszeiten- und Feiertage">
-               <div id="gebetszeiten">
+        <section id="gebetszeiten-und-feiertage">
+    <div id="gebetszeiten">
             <h2>Gebetszeiten</h2>
             <p>Ihr Standort: <span id="stadt-name">Unbekannt. Bitte manuell wählen.</span></p>
             <select id="stadt-auswahl"></select>
@@ -53,11 +53,10 @@
                 <tr><td>Letztes Drittel</td><td id="letztes-drittel">00:00</td></tr>
             </table>
                      </div>
-            <div id="feiertage">
+              <div id="feiertage">
         <h2>Islamische Feiertage</h2>
-                <p> Bitte beachtet, dass die islamischen Feiertage mit dem Vorabend beginnen und sich aufgrund der Mondsichtungen ändern können. </p>
         <table id="feiertage-tabelle">
-            <tr><th>Feiertag</th><th>Datum</th><th>Noch (Tage)</th></tr>
+            <tr><th>Feiertag</th><th>Datum</th><th>Countdown</th></tr>
         </table>
     </div>
         </section>
