--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         <h2>Islamische Feiertage</h2>
         <table id="feiertage-tabelle">
             <tr><th>Feiertag</th><th>Datum</th><th>Countdown</th></tr>
+            <tr></tr><td>${feiertag.name}</td><td>${datum.toLocaleDateString("de-DE")}</td><td class="countdown-bold">${countdown} Tage</td>`;
+            tabelle.appendChild(row)</tr>
         </table>
     </div>
         </section>
