--- a/index.html
+++ b/index.html
@@ -53,32 +53,21 @@
                 <tr><td>Letztes Drittel</td><td id="letztes-drittel">00:00</td></tr>
             </table>
                      </div>
-             <section id="gebetszeiten-und-feiertage">
-    <div id="gebetszeiten">
-        <h2>Gebetszeiten</h2>
-        <p>Ihr Standort: <span id="stadt-name">Unbekannt. Bitte manuell wählen.</span></p>
-        <select id="stadt-auswahl"></select>
-        <table>
-            <tr><th>Gebet</th><th>Uhrzeit</th></tr>
-            <tr><td><strong>Fajr</strong></td><td id="fajr" class="fajr-bold">00:00</td></tr>
-            <tr><td>Shuruk</td><td id="shuruk">00:00</td></tr>
-            <tr><td>Dhuhr</td><td id="dhuhr">00:00</td></tr>
-            <tr><td>Asr</td><td id="asr">00:00</td></tr>
-            <tr><td>Maghrib</td><td id="maghrib">00:00</td></tr>
-            <tr><td>Isha</td><td id="isha">00:00</td></tr>
-            <tr><td>Islamische Mitternacht</td><td id="mitternacht">00:00</td></tr>
-            <tr><td>Letztes Drittel</td><td id="letztes-drittel">00:00</td></tr>
-        </table>
-    </div>
 
     <div id="feiertage">
-        <h2>Islamische Feiertage</h2>
+        <h2>Islamische Tage</h2>
+        <p>Achtung! Die islamischen Tage beginnen bereits am Vorabend der unten angeführten Tage. Bitte beachtet auch, dass die Mondsichtung obligatorisch ist, wodurch sich kurzfristig Änderungen des Tages ergeben können und ALLAH swt weiß es am Besten.</p>
         <table id="feiertage-tabelle">
-            <tr><th>Feiertag</th><th>Datum</th><th>Countdown</th></tr>
-            <tr><td>Ramadan beginnt</td><td>01.03.2025</td><td id="ramadan-countdown">Lädt...</td></tr>
-            <tr><td>Eid al-Fitr</td><td>01.04.2025</td><td id="fitr-countdown">Lädt...</td></tr>
-            <tr><td>Eid al-Adha</td><td>15.06.2025</td><td id="adha-countdown">Lädt...</td></tr>
-            <tr><td>Islamisches Neujahr</td><td>21.07.2025</td><td id="neujahr-countdown">Lädt...</td></tr>
+            <tr><th>Feiertag</th><th>Datum</th><th>Verbleibende Tage</th></tr>
+            <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown" class="countdown-bold">Lädt...</td></tr>
+            <tr><td>Eid al-Fitr</td><td>30.03.2025</td><td id="fitr-countdown" class="countdown-bold">Lädt...</td></tr>
+            <tr><td>Islamisches Neujahr</td><td>04.06.2025</td><td id="hajj-countdown" class="countdown-bold">Lädt...</td></tr>
+            <tr><td>Islamisches Neujahr</td><td>05.06.2025</td><td id="arafah-countdown" class="countdown-bold">Lädt...</td></tr>
+            <tr><td>Eid al-Adha</td><td>06.06.2025</td><td id="adha-countdown" class="countdown-bold">Lädt...</td></tr>
+            <tr><td>Islamisches Neujahr</td><td>26.06.2025</td><td id="neujahr-countdown" class="countdown-bold">Lädt...</td></tr>
+            <tr><td>Islamisches Neujahr</td><td>05.07.2025</td><td id="ashura-countdown" class="countdown-bold">Lädt...</td></tr>
+            <tr><td>Islamisches Neujahr</td><td>16.01.2026</td><td id="isra-countdown" class="countdown-bold">Lädt...</td></tr>
+        
         </table>
     </div>
 </section>
