--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
             <tr><th>Feiertag</th><th>Datum</th><th>Verbleibende Tage</th></tr>
             <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown" class="countdown-bold">Lädt...</td></tr>
             <tr><td>Eid al-Fitr</td><td>30.03.2025</td><td id="fitr-countdown" class="countdown-bold">Lädt...</td></tr>
-            <tr><td>Islamisches Neujahr</td><td>04.06.2025</td><td id="hajj-countdown" class="countdown-bold">Lädt...</td></tr>
-            <tr><td>Islamisches Neujahr</td><td>05.06.2025</td><td id="arafah-countdown" class="countdown-bold">Lädt...</td></tr>
+            <tr><td>Hajj</td><td>04.06.2025</td><td id="hajj-countdown" class="countdown-bold">Lädt...</td></tr>
+            <tr><td>Arafah</td><td>05.06.2025</td><td id="arafah-countdown" class="countdown-bold">Lädt...</td></tr>
             <tr><td>Eid al-Adha</td><td>06.06.2025</td><td id="adha-countdown" class="countdown-bold">Lädt...</td></tr>
             <tr><td>Islamisches Neujahr</td><td>26.06.2025</td><td id="neujahr-countdown" class="countdown-bold">Lädt...</td></tr>
-            <tr><td>Islamisches Neujahr</td><td>05.07.2025</td><td id="ashura-countdown" class="countdown-bold">Lädt...</td></tr>
-            <tr><td>Islamisches Neujahr</td><td>16.01.2026</td><td id="isra-countdown" class="countdown-bold">Lädt...</td></tr>
+            <tr><td>Ashura</td><td>05.07.2025</td><td id="ashura-countdown" class="countdown-bold">Lädt...</td></tr>
+            <tr><td>Isra' und Mi'raj</td><td>16.01.2026</td><td id="isra-countdown" class="countdown-bold">Lädt...</td></tr>
         
         </table>
     </div>
