--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h2>Islamische Tage</h2>
         <p>Achtung! Die islamischen Tage beginnen bereits am Vorabend der unten angeführten Tage. Bitte beachtet auch, dass die Mondsichtung obligatorisch ist, wodurch sich kurzfristig Änderungen des Tages ergeben können und ALLAH swt weiß es am Besten.</p>
         <table id="feiertage-tabelle">
-            <tr><th>Feiertag</th><th>Datum</th><th>Verbleibende Tage</th></tr>
+            <tr><th>Ereignis</th><th>Datum</th><th>Verbleibende Tage</th></tr>
             <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown" class="countdown-bold">Lädt...</td></tr>
             <tr><td>Eid al-Fitr</td><td>30.03.2025</td><td id="fitr-countdown" class="countdown-bold">Lädt...</td></tr>
             <tr><td>Hajj</td><td>04.06.2025</td><td id="hajj-countdown" class="countdown-bold">Lädt...</td></tr>
